--- a/templates/layouts/main.handlebars
+++ b/templates/layouts/main.handlebars
@@ -2,10 +2,12 @@
 <html>
 <head>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Barcode Generator</title>
+    <script src="https://cdn.tailwindcss.com" async defer></script>
 </head>
 <body>
-
     {{{body}}}
-
 </body>
 </html>
