--- a/templates/index.handlebars
+++ b/templates/index.handlebars
@@ -32,7 +32,7 @@
     <div class="text-lg max-w-prose mx-auto space-y-4">
       <div class="flex justify-between space-x-4">
         <h1 class="block">
-          <span class="block text-base text-indigo-600 font-semibold tracking-wide uppercase">Online</span>
+          <span class="block text-base text-amber-600 font-semibold tracking-wide uppercase">Online</span>
           <span class="mt-2 block text-3xl leading-8 font-extrabold tracking-tight text-gray-900 sm:text-4xl">Barcode Generator</span>
         </h1>
         <a href="https://github.com/lazehang/getbarcode" class="block cursor-pointer">
