--- a/templates/index.handlebars
+++ b/templates/index.handlebars
@@ -44,7 +44,7 @@
         </a>
       </div>
 
-      <p class="mt-6 text-xl text-gray-500 leading-8">Online barcode generator using url.</p>
+      <p class="mt-6 text-xl text-gray-500 leading-8">Online barcode generator using url using <a href="https://github.com/lindell/JsBarcode#readme">JsBarcode</a>.</p>
 
       <i class="text-xs md:text-sm">
         https://barcode.lazehang.com/generate/:value
@@ -58,5 +58,8 @@
     </div>
   </div>
 </div>
+<footer class="text-center p-5 text-sm">
+  built by <a class="text-bold italic underline" href="https://www.lazehang.com">lazehang</a>
+</footer>
 </main>
 <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
