--- a/templates/index.handlebars
+++ b/templates/index.handlebars
@@ -1,4 +1,4 @@
-<main class="bg-slate-100 h-screen w-full">
+<main class="bg-slate-100 h-screen w-full flex flex-col justify-between">
 <div class="relative py-10 overflow-hidden h-full">
   <div class="hidden lg:block lg:absolute lg:inset-y-0 lg:h-full lg:w-full">
     <div class="relative h-full text-lg max-w-prose mx-auto" aria-hidden="true">
