--- a/templates/index.handlebars
+++ b/templates/index.handlebars
@@ -1,4 +1,4 @@
-<main class="bg-slate-100 h-screen w-full flex flex-col justify-between">
+<main class="bg-gray-200 min-h-screen w-full flex flex-col justify-between">
 <div class="relative py-10 overflow-hidden h-full">
   <div class="hidden lg:block lg:absolute lg:inset-y-0 lg:h-full lg:w-full">
     <div class="relative h-full text-lg max-w-prose mx-auto" aria-hidden="true">
@@ -32,7 +32,7 @@
     <div class="text-lg max-w-prose mx-auto space-y-4">
       <div class="flex justify-between space-x-4">
         <h1 class="block">
-          <span class="block text-base text-amber-600 font-semibold tracking-wide uppercase">Online</span>
+          <span class="block text-base text-amber-400 font-semibold tracking-wide uppercase">Online</span>
           <span class="mt-2 block text-3xl leading-8 font-extrabold tracking-tight text-gray-900 sm:text-4xl">Barcode Generator</span>
         </h1>
         <a href="https://github.com/lazehang/getbarcode" class="block cursor-pointer">
@@ -55,6 +55,25 @@
       barcode generator</a> by Mangal Hang Limbu (<a href="https://codepen.io/lazehang">@lazehang</a>)
       on <a href="https://codepen.io">CodePen</a>.</span>
       </p>
+
+      <div class="flex flex-col items-center space-y-4 w-full max-w-sm mx-auto">
+        <form id="generate-form" class="w-full flex flex-col space-y-2 items-center">
+          <div class="w-full">
+            <label class="block text-sm font-medium text-gray-700 pl-3">Code</label>
+            <div class="mt-1 w-full">
+              <input type="text" name="barcodeValue" class="px-3 py-2 shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md" placeholder="code">
+            </div>
+          </div>
+          <button type="submit" class="items-center px-3 py-2 border border-transparent text-sm leading-4 font-medium rounded-md shadow-sm text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">Generate</button>
+        </form>
+        <div id="result" class="flex justify-center w-full"></div>
+        <div class="clipboard flex justify-between space-x-2 items-center">
+          <input id="result-url" type="text" class="block px-3 py-2 shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md">
+          <svg xmlns="http://www.w3.org/2000/svg" id="copythis" class="h-6 w-6 cursor-pointer block" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M8 5H6a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2v-1M8 5a2 2 0 002 2h2a2 2 0 002-2M8 5a2 2 0 012-2h2a2 2 0 012 2m0 0h2a2 2 0 012 2v3m2 4H10m0 0l3-3m-3 3l3 3" />
+          </svg>
+        </div>
+      </div>
     </div>
   </div>
 </div>
@@ -63,3 +82,4 @@
 </footer>
 </main>
 <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+<script src="/js/index.js"></script>
