--- a/templates/index.handlebars
+++ b/templates/index.handlebars
@@ -64,10 +64,10 @@
               <input type="text" name="barcodeValue" class="px-3 py-2 shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md" placeholder="code">
             </div>
           </div>
-          <button type="submit" class="items-center px-3 py-2 border border-transparent text-sm leading-4 font-medium rounded-md shadow-sm text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">Generate</button>
+          <button type="submit" class="w-full md:w-auto items-center px-3 py-2 border border-transparent text-sm leading-4 font-medium rounded-md shadow-sm text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">Generate</button>
         </form>
         <div id="result" class="flex justify-center w-full"></div>
-        <div class="clipboard flex justify-between space-x-2 items-center">
+        <div class="clipboard flex justify-between space-x-2 items-center w-full">
           <input id="result-url" type="text" class="block px-3 py-2 shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md">
           <svg xmlns="http://www.w3.org/2000/svg" id="copythis" class="h-6 w-6 cursor-pointer block" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
             <path stroke-linecap="round" stroke-linejoin="round" d="M8 5H6a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2v-1M8 5a2 2 0 002 2h2a2 2 0 002-2M8 5a2 2 0 012-2h2a2 2 0 012 2m0 0h2a2 2 0 012 2v3m2 4H10m0 0l3-3m-3 3l3 3" />
