--- a/templates/index.handlebars
+++ b/templates/index.handlebars
@@ -32,7 +32,7 @@
     <div class="text-lg max-w-prose mx-auto space-y-4">
       <div class="flex justify-between space-x-4">
         <h1 class="block">
-          <span class="block text-base text-amber-400 font-semibold tracking-wide uppercase">Online</span>
+          <span class="block text-base text-yellow-400 font-semibold tracking-wide uppercase">Online</span>
           <span class="mt-2 block text-3xl leading-8 font-extrabold tracking-tight text-gray-900 sm:text-4xl">Barcode Generator</span>
         </h1>
         <a href="https://github.com/lazehang/getbarcode" class="block cursor-pointer">
@@ -59,12 +59,12 @@
       <div class="flex flex-col items-center space-y-4 w-full max-w-sm mx-auto">
         <form id="generate-form" class="w-full flex flex-col space-y-2 items-center">
           <div class="w-full">
-            <label class="block text-sm font-medium text-gray-700 pl-3">Code</label>
+            <label class="block text-sm font-semibold text-gray-700">Code</label>
             <div class="mt-1 w-full">
               <input type="text" name="barcodeValue" class="px-3 py-2 shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md" placeholder="code">
             </div>
           </div>
-          <button type="submit" class="w-full md:w-auto items-center px-3 py-2 border border-transparent text-sm leading-4 font-medium rounded-md shadow-sm text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">Generate</button>
+          <button type="submit" class="tracking-wide w-full md:w-auto items-center p-3 border border-transparent text-sm leading-4 font-medium rounded-md shadow-sm text-white bg-black hover:bg-white hover:text-black focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">GENERATE</button>
         </form>
         <div id="result" class="flex justify-center w-full"></div>
         <div class="clipboard flex justify-between space-x-2 items-center w-full">
