--- a/templates/index.handlebars
+++ b/templates/index.handlebars
@@ -64,7 +64,7 @@
               <input type="text" name="barcodeValue" class="px-3 py-2 shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md" placeholder="code">
             </div>
           </div>
-          <button type="submit" class="tracking-wide w-full md:w-auto items-center p-3 border border-transparent text-sm leading-4 font-medium rounded-md shadow-sm text-white bg-black hover:bg-white hover:text-black focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">GENERATE</button>
+          <button type="submit" class="tracking-wide w-full md:w-auto items-center px-6 py-3 border border-transparent text-sm leading-4 font-medium rounded-md shadow-sm text-white bg-black hover:bg-white hover:text-black focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">GENERATE</button>
         </form>
         <div id="result" class="flex justify-center w-full"></div>
         <div class="clipboard flex justify-between space-x-2 items-center w-full">
