--- a/templates/index.handlebars
+++ b/templates/index.handlebars
@@ -1,4 +1,4 @@
-<main class="bg-gray-200 min-h-screen w-full flex flex-col justify-between">
+<main class="bg-gray-200 min-h-screen w-full flex flex-col justify-around">
 <div class="relative py-10 overflow-hidden h-full">
   <div class="hidden lg:block lg:absolute lg:inset-y-0 lg:h-full lg:w-full">
     <div class="relative h-full text-lg max-w-prose mx-auto" aria-hidden="true">
@@ -50,21 +50,15 @@
         https://barcode.lazehang.com/generate/:value
       </i>
 
-      <p class="codepen" data-height="300" data-default-tab="result" data-slug-hash="wvmWLxX" data-preview="true" data-user="lazehang" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
-      <span>See the Pen <a href="https://codepen.io/lazehang/pen/wvmWLxX">
-      barcode generator</a> by Mangal Hang Limbu (<a href="https://codepen.io/lazehang">@lazehang</a>)
-      on <a href="https://codepen.io">CodePen</a>.</span>
-      </p>
-
-      <div class="flex flex-col items-center space-y-4 w-full max-w-sm mx-auto">
-        <form id="generate-form" class="w-full flex flex-col space-y-2 items-center">
+      <div class="flex flex-col items-center space-y-4 w-full mx-auto mt-16">
+        <form id="generate-form" class="w-full flex flex-col md:flex-row space-y-2 items-center md:items-end md:space-x-2 md:space-y-0">
           <div class="w-full">
-            <label class="block text-sm font-semibold text-gray-700">Code</label>
+            <label class="block text-sm font-semibold text-gray-700 pl-1">Barcode value</label>
             <div class="mt-1 w-full">
-              <input type="text" name="barcodeValue" class="px-3 py-2 shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md" placeholder="code">
+              <input type="text" name="barcodeValue" class="font-thin px-3 py-2 md:py-3 shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md" placeholder="code">
             </div>
           </div>
-          <button type="submit" class="tracking-wide w-full md:w-auto items-center px-6 py-3 border border-transparent text-sm leading-4 font-medium rounded-md shadow-sm text-white bg-black hover:bg-white hover:text-black focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">GENERATE</button>
+          <button type="submit" class="tracking-wide w-full md:w-auto items-center px-6 py-3 border-2 border-transparent text-sm leading-4 font-medium rounded-md shadow-sm text-white bg-black hover:bg-yellow-400 hover:text-black focus:outline-none">GENERATE</button>
         </form>
         <div id="result" class="flex justify-center w-full"></div>
         <div class="clipboard flex justify-between space-x-2 items-center w-full">
@@ -77,9 +71,8 @@
     </div>
   </div>
 </div>
-<footer class="text-center p-5 text-sm">
+<footer class="text-center p-5 text-sm mt-auto">
   built by <a class="text-bold italic underline" href="https://www.lazehang.com">lazehang</a>
 </footer>
 </main>
-<script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
 <script src="/js/index.js"></script>
